--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Rusi Wang" # "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio: |
-    B.Eng. @UESTC | M.Eng./Ph.D. student @Tongji
+    B.Eng. @UESTC | M.S.(Eng.)/Ph.D. student @Tongji
     (Wechat: rubiwrs)
   location         : "Shanghai, China"
   employer         : "Tongji University"
