--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Rusi Wang" # "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio: |
-    B.Eng. @UESTC | M.S.(Eng.)/Ph.D. student @Tongji
-    (Wechat: rubiwrs)
+    B.Eng.@UESTC | M.Sc.(Eng.)/Ph.D. student@Tongji
+    (WeChat: rubiwrs)
   location         : "Shanghai, China"
   employer         : "Tongji University"
   uri              : # URL
