Change layout type for news items

--- a/_config.yml
+++ b/_config.yml
@@ -268,7 +268,7 @@ defaults:
       path: ""
       type: news
     values:
-      layout: news_item
+      layout: news
       author_profile: true
       share: true
       comments: true
