Update bio to reflect Ph.D. candidate status

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Rusi Wang" # "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio: |
-    B.Eng.@UESTC | M.Sc.(Eng.)/Ph.D. Student@Tongji
+    B.Eng.@UESTC | M.Sc.(Eng.)/Ph.D. Candidate@Tongji
     (WeChat: rubiwrs)
   location         : "Shanghai, China"
   employer         : "Tongji University"
