--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "duncanwang-eo/duncanwang-eo.github.io"
 author:
   # Biographic information
   avatar           : "duncanicon.png"
-  name             : "王学荣" # "Your Sidebar Name"
+  name             : "王学荣  (Duncan Wang)" # "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio: |
     @邓肯灭菌工作室
