--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,8 +27,8 @@ main:
 #  - title: "Guide"
 #    url: /markdown/
 
-#  - title: "中文"
-#    url: /chinese/
+  - title: "English"
+    url: /english/
 
 #  - title: "Français"
 #    url: /francais/
